# ocr_demo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_CN.md  build.sh  demo.py  readme.md  requirements.txt  run_v5_demo.sh  set_env.sh  setup.sh  startup.sh  ui_components.py
SDK/dx_rt/cli/: CMakeLists.txt  dxrt-cli-internal.cpp  dxrt-cli.cpp  dxrtd.cpp  parse_model.cpp  run_model.cpp
SDK/dx_rt/cli/dxbenchmark/: CMakeLists.txt  dxbenchmark.cpp
SDK/dx_rt/cli/dxtop/: CMakeLists.txt  dxtop.cpp
SDK/dx_rt/cli/dxtop/core/: npu_core.cpp  npu_core.h  npu_device.cpp  npu_device.h  npu_monitor.cpp  npu_monitor.h  version.h
SDK/dx_rt/examples/cpp/: CMakeLists.txt
SDK/dx_rt/examples/cpp/check_versions/: CMakeLists.txt  check_versions.cpp
SDK/dx_rt/examples/cpp/display_async_models_1/: CMakeLists.txt  display_async_models_1.cpp
SDK/dx_rt/examples/cpp/display_async_models_2/: CMakeLists.txt  display_async_models_2.cpp
SDK/dx_rt/examples/cpp/display_async_pipe/: CMakeLists.txt  display_async_pipe.cpp  simple_circular_buffer_pool.h
SDK/dx_rt/examples/cpp/display_async_thread/: CMakeLists.txt  display_async_thread.cpp
SDK/dx_rt/examples/cpp/display_async_wait/: CMakeLists.txt  display_async_wait.cpp
SDK/dx_rt/examples/cpp/include/: logger.h
SDK/dx_rt/examples/cpp/multi_input_model_inference/: CMakeLists.txt  README_multi_input_model_inferenece.md  multi_input_model_inference.cpp
SDK/dx_rt/examples/cpp/run_async_model/: CMakeLists.txt  run_async_model.cpp
SDK/dx_rt/examples/cpp/run_async_model_bound/: CMakeLists.txt  run_async_model_bound.cpp
SDK/dx_rt/examples/cpp/run_async_model_conf/: CMakeLists.txt  run_async_model_conf.cpp
SDK/dx_rt/examples/cpp/run_async_model_output/: CMakeLists.txt  run_async_model_output.cpp
SDK/dx_rt/examples/cpp/run_async_model_profiler/: CMakeLists.txt  run_async_model_profiler.cpp
SDK/dx_rt/examples/cpp/run_async_model_thread/: CMakeLists.txt  run_async_model_thread.cpp
SDK/dx_rt/examples/cpp/run_async_model_wait/: CMakeLists.txt  run_async_model_wait.cpp
SDK/dx_rt/examples/cpp/run_batch_model/: CMakeLists.txt  run_batch_model.cpp
SDK/dx_rt/examples/cpp/run_sync_model/: CMakeLists.txt  run_sync_model.cpp
SDK/dx_rt/examples/cpp/run_sync_model_bound/: CMakeLists.txt  run_sync_model_bound.cpp
SDK/dx_rt/examples/cpp/run_sync_model_output/: CMakeLists.txt  run_sync_model_output.cpp  simple_circular_buffer_pool.h
SDK/dx_rt/python_package/: .pre-commit-config.yaml  make_whl.sh  pyproject.toml
SDK/dx_rt/python_package/bitmatch/: bitmatch.py
SDK/dx_rt/python_package/cli/: parse_model.py  run_model.py  run_model_prof.py
SDK/dx_rt/python_package/src/dx_engine/: __init__.py  configuration.py  device_status.py  dtype.py  inference_engine.py  inference_option.py  utils.py  version.py
SDK/dx_rt/python_package/test/: exception_test.py  python_api_test.py
SDK/dx_rt/test/: CMakeLists.txt  ort_test.py  run_model_performance_test.py
SDK/dx_rt/test/deployment/: tc_dx_rt_run.sh  tc_dx_rt_run_exec.sh
SDK/dx_rt/test/deployment/tc_dx_rt/: 1-1.sh  1-2.sh  2-1-1.sh  2-2-1.sh  2-3-1.sh  3-1-1.sh  3-1-2.sh  3-2-1.sh  3-2-2.sh  3-3-1.sh  3-3-2.sh  3-4-1.sh  3-4-2.sh  3-5-1.sh  3-5-2.sh  3-6-1.sh  3-6-2.sh  3-8-1.sh  3-8-2.sh  4-1.sh  4-2-1.sh  4-2-2.sh  4-2-3.sh  4-2-4.sh  4-2-5.sh  4-3-1.sh  4-3-2.sh  4-3-3.sh  4-3-5.sh  4-3-6.sh  4-3-7.sh  4-4-1.sh
SDK/dx_rt/test/deployment/tc_dx_rt_exec/: 4-1.sh  4-2-1.sh  4-2-2.sh  4-2-3.sh  4-2-4.sh  4-2-5.sh  4-3-2.sh  4-3-4.sh  4-3-5.sh  4-3-8.sh
SDK/dx_rt/test/features/: CMakeLists.txt
SDK/dx_rt/test/features/bit_match/: CMakeLists.txt  bit_match.cpp  (+2 more)
SDK/dx_rt/test/include/: dxrt_test.h
SDK/dx_rt/test/scripts/: firmware_settings.json  tc_abnormal_termination.sh  tc_npu_exception.sh  test_all_functions.sh
SDK/dx_rt/test/test_model_list_files/: 10000_list.txt  1000_list.txt  2500_list.txt  250_list.txt  30000_list.txt  3790_valid_model_list.txt  5000_list.txt  500_list.txt  large_model_list.txt  middle_model_list.txt  small_model_list.txt
SDK/dx_rt/test/unittest/: AD01FP32_1.dxnn  CMakeLists.txt  buffer_test.cpp  circular_buffer_test.cpp  cli_basic_test.cpp  cli_internal_extended_test.cpp  cli_test.cpp  common.cpp  datatype_test.cpp  device_core_test.cpp  device_info_status_test.cpp  device_task_layer_test.cpp  device_test.cpp  driver_adapter_basic_test.cpp  driver_test.cpp  exception_handler_test.cpp  general_test.cpp  gtest.cpp  ie_multi_test.cpp  inference_engine_test.cpp  inference_option_test.cpp  integration_device_request_response_test.cpp  main.cpp  memory_test.cpp  nfh_layer_test.cpp  ort_test.cpp  request_response_cpu_basic_test.cpp  request_response_cpu_extended_test.cpp  request_response_normal_test.cpp  request_test.cpp  rmapinfo_test.cpp  scheduler_test.cpp  service_memory_interface_test.cpp  task_test.cpp  tensor_test.cpp  util_test.cpp
engine/: baidu.py  (+5 more)
server/: CMakeLists.txt  README.md  json_response.cpp  json_response.h  ocr_handler.cpp  ocr_handler.h  pdf_handler.cpp  pdf_handler.h  run_server.sh  server_main.cpp  需求文档.md
server/benchmark/: CMakeLists.txt  api_benchmark.cpp  run.sh  run_api_benchmark.py  run_pdf_benchmark.py
server/benchmark/results/: API_benchmark_report.md  PDF_benchmark_report.md  api_benchmark_results.json  pdf_benchmark_results.json  stress_benchmark_report.md  stress_benchmark_results.json
server/tests/: CMakeLists.txt  run_pdf_ocr_test.sh  stress_test.cpp  test_file_handler.cpp  test_json_response.cpp  test_main.cpp  test_ocr_request.cpp  test_pdf_handler.cpp  test_pdf_ocr.py
server/tests/results/: Song_DefectFill_Realistic_Defect_Generation_with_Inpainting_Diffusion_Model_for_Visual_CVPR_2025_paper_OCR_result.json  book-rev7_OCR_result.json
server/webui/: README.md  app.py  requirements.txt
src/detection/: CMakeLists.txt  db_postprocess.cpp  text_detector.cpp
src/recognition/: CMakeLists.txt  rec_postprocess.cpp  text_recognizer.cpp
test/detection/: CMakeLists.txt  test_detector.cpp
test/pipeline/: CMakeLists.txt  test_pipeline.cpp  test_pipeline_async.cpp
test/recognition/: CMakeLists.txt  test_recognizer.cpp
(+337 files in other folders)
